--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Cayman Blog Theme
 description: Cayman Blog Theme is a clean, responsive blogging theme for Jekyll and Gitlab/GitHub Pages.
-show_downloads: true
+show_downloads: flase
 
-baseurl: "/cayman-blog" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
-url: "https://lorepirri.github.io" # change this to the base hostname & protocol for your site
+baseurl: "/hpc" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
+url: "https://moyu5021.github.io" # change this to the base hostname & protocol for your site
 
 
 google_analytics:
