--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ email: my_email_address@lalala.com
 location: My location # ex. Nice, France
 company: MyCompany
 company_url: my_company_website
-github_url: my_github_url # ex. https://github.com/DONGChuan
+github_url: https://github.com/moyu5021 # ex. https://github.com/DONGChuan
 github_username: # ex. DONGChuan
 description: description_of_your_web_site
 favicon: favicon.png # Image must be in assets/images
@@ -22,7 +22,7 @@ repository: github_username/github_username.github.io # ex. DONGChuan/DONGChuan.
 # For local test, please use http://localhost:4000
 # For production, use your github page url. ex. http://dongchuan.github.io
 #url: http://localhost:4000
-baseurl: "/hpc
+baseurl: "/hpc"
 url: "https://moyu5021.github.io"
 
 ## Gem
