--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ repository: github_username/github_username.github.io # ex. DONGChuan/DONGChuan.
 # For local test, please use http://localhost:4000
 # For production, use your github page url. ex. http://dongchuan.github.io
 #url: http://localhost:4000
-baseurl: "/hpc"
-url: "https://moyu5021.github.io"
+#abaseurl: "/hpc"
+url: "https://moyu5021.github.io/hpc"
 
 ## Gem
 gems:
