--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ github_url: https://github.com/moyu5021 # ex. https://github.com/DONGChuan
 github_username: # ex. DONGChuan
 description: description_of_your_web_site
 favicon: favicon.png # Image must be in assets/images
-repository: github_username/github_username.github.io # ex. DONGChuan/DONGChuan.github.io
+repository: moyu5021/moyu5021.github.io/hpc # ex. DONGChuan/DONGChuan.github.io
 
 # The base hostname & protocol for your site
 # For local test, please use http://localhost:4000
